2011-02-01  Lars Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-render-td): Only do colours at the final rendering.
	Should be slightly faster.
	(shr-insert-table): Fix up TD background colours when doing the
	vertical padding.

	* gnus-art.el (article-date-ut): Protect against articles with no Date
	header.
	(article-update-date-lapsed): Don't use current-column to find the
	horizontal position.  It's fragile in the presence of \003 characters.

	* gnus-start.el (gnus-read-active-file-1): Remove dead parameter infos.

2011-01-31  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (article-transform-date): Rewrite to still work when
	there are several rfc2822 parts.
	(article-transform-date): Fix infinite recursion.
	(article-date-ut): Replace infinitely many Date headers with a single
	one when called interactively.

	* nnimap.el (nnimap-wait-for-response): Wait for results in a more
	secure manner.

	* gnus-art.el (article-update-date-lapsed): Try to avoid having point
	move around by not using save-window-excursion.  It seems to work...

2011-01-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-make-date-line): Work for user-defined format.

2011-01-31  Lars Ingebrigtsen  <larsi@gnus.org>

	* nntp.el (nntp-retrieve-group-data-early)
	(nntp-finish-retrieve-group-infos): Implement the asynchronous data
	fetching functions.

	* gnus-start.el (gnus-read-active-for-groups): Read the active files
	thoroughly for all backends that have no known groups.  This should
	allow new nnml methods to retrieve mail.

	* gnus-group.el (gnus-group-jump-to-group): Allow jumping to groups
	that Gnus doesn't know exists again.

	* gnus-art.el (gnus-article-date-lapsed-new-header): Removed.
	(gnus-treat-date-ut): Ditto.
	(gnus-article-update-date-header): Renamed.
	(gnus-treat-date-local): Removed.
	(gnus-treat-date-english): Removed.
	(gnus-treat-date-lapsed): Removed.
	(gnus-treat-date-combined-lapsed): Removed.
	(gnus-treat-date-original): Removed.